# vibe-check

./: .gitignore  README.md
docs/: daily-game-generator.md  mcp-setup.md
src/backend/: agents.py  artifacts.py  browser.py  browser_runner.mjs  cli.py  delivery.py  delivery_mcp.py  events.py  generator.py  main.py  metadata.py  models.py  orchestrator.py  pyproject.toml  scheduler.py  storage.py
src/backend/data/: __init__.py  catalog.py  objects.py
src/backend/delivery/: __init__.py  mcp.py
src/backend/generation/: __init__.py  codex.py  pipeline.py  scheduler.py
src/backend/prompts/: __init__.py  adversarial_tester_system.txt  delivery_contract.txt  maker_system.txt
src/backend/tests/: test_delivery.py  test_generation.py  test_pipeline.py
src/frontend/: package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/games/[releaseDate]/: page.tsx
src/frontend/lib/: sfx.ts
wiki/: README.md  build-week.md  core-loop.md  spider-axes.md  v1-scope.md  vibe-check.md
