[project]
name = "vibe-check-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "mcp>=1.27,<2",
  "openai-codex==0.144.4",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
daily-game = "src.backend.cli:main"

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]
